# GAthon

./: .gitignore  LICENSE.MD  README.MD  data.json  pyproject.toml
src/GAthon/: CardData.py  GACardData.py  GAQuery.py  __init__.py  enums.py  examples.py  main.py
src/GAthon/examples/: DataExample.py  QueryExample.py
