[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GAthon"
version = "0.1.5"
authors = [
  { name="Tan Kang Zheng", email="tankangzheng@hotmail.com" },
]
description = "A Python wrapper for the Grand Archive TCG API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "httpx"
]

[project.urls]
Homepage = "https://github.com/TanKangZheng/GAthon"
Issues = "https://github.com/TanKangZheng/GAthon/issues"